--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@
 * License: https://bootstrapmade.com/license/
 */
 
+
+
+
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -364,7 +367,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center no-repeat;
+  background: url("../img/one.jpg") top center no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 82px;
